# XENO

./: .gitignore  Dockerfile  README.md  RENAME_SUMMARY.md  XGBoost.py  card.js  contribute.md  cpu.ipynb  cpu.py  data.json  dataManager.js  game.html  game_test.py  index.html  index2.html  jest.config.js  match.html  model.js  module.py  origin.json  package-lock.json  package.json  play.ipynb  play.py  pyproject.toml  result.txt  room.html  run_server  select.js  server.js  test.ipynb  test.js  test.py  test.sh  test_card1.py  test_draw.py  test_inType_false.py  test_inType_true.py  tmp_model.json  training.py  (+7 more)
.github/: copilot-instructions.md
.github/workflows/: deploy-diagnostic.yml  deploy.yml
config/: config.js
coverage/: index.html  lcov.info
coverage/lcov-report/: index.html
coverage/xeno/: dataManager.js.html  index.html  model.js.html  select.js.html  server.js.html
favicon/: site.webmanifest
handlers/: socketHandlers.js
managers/: dataManager.js  roomManager.js
public/: game.html  index.html  messages.json  result.css  result.html  room.html  rule.html  site.webmanifest
public/js/: animation.js  audio.js  game.js  index.js  messages.js  result.js  room.js  socketHandlers.js
result/: log.csv
services/: gameService.js
tests/: animation.test.js  animationTimeout.test.js  audio.test.js  cardIssues.test.js  config.test.js  deckEmpty.test.js  game.test.js  gameService.test.js  integration.test.js  logger.test.js  setup.js  socket.test.js  socketHandlers.test.js  spec.js  stress.test.js  timeout.test.js  utilities.test.js
utils/: logger.js
(+36 files in other folders)
