[tool.poetry]
name = "xeno"
version = "0.1.0"
description = ""
authors = ["hitori51 <e235714@ie.u-ryukyu.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
m2cgen = "^0.10.0"
xgboost = "^3.0.4"
scikit-learn = "^1.7.1"
joblib = "^1.5.1"
tqdm = "^4.67.1"
matplotlib = "^3.10.5"
seaborn-analyzer = "^0.3.6"
optuna = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
